# examples

./: .build.sh  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Makefile  MarkDownSyntax.md  examples.code-workspace  examples.cpp  sh.exe.stackdump
Spring/: .gitignore
apache/camel/camel-bean/: pom.xml
apache/camel/camel-java-soap/: .gitignore
apache/maven/: pom.xml  readme.txt
apache/maven/solution/: pom.xml
arduino/: examples-workspace.code-workspace
arduino/Arduino/WaveShare_MLX90614/: WaveShare_MLX90614.cpp  WaveShare_MLX90614.h
arduino/esp8266/i2c-raspb/: i2c-raspb.ino
arduino/esp8266/mcp3208/: mcp3208.ino
arduino/example_87876/: example_87876.ino
arduino/example_micro_lcd_with_nodemcu/: example_micro_lcd_with_nodemcu.ino
arduino/i2c-raspb/: i2c-raspb.ino
arduino/ledrgb/: ledrgb.ino
arduino/ledrgbsin/: ledheartbeat.h  ledrgbsin.ino
arduino/modbus/ledslavea/: ledslavea.ino
arduino/modbus/ledslaveb/: ledslaveb.ino
arduino/modbus/ledslavec/: ledslavec.ino
arduino/modbus/simpleslave/: simpleslave.ino
arduino/oled/oled091in128x32/: oled091in128x32.ino
arduino/oled/oled128x32promicrologo/: fds-celsius-logo.h  fds-pid-logo.h
arduino/oled/oled128x32uno/: oled128x32uno.ino
arduino/oled/oled128x32unologo/: fds-motor-logo.h  oled128x32unologo.ino
arduino/oled/u8x8/: u8x8.ino
arduino/rs485/: rs485.ino
arduino/rs485/rs485hardusb/: rs485hardusb.ino
arduino/rs485/rs485softusb/: rs485softusb.ino
arduino/rs485/rs485usb/: rs485usb.ino
arduino/ssd1306_128x64_i2c/: ssd1306_128x64_i2c.ino
arduino/stepper/: stepper.ino
arduino/testing/blinkboardledandserial/: blinkboardledandserial.ino
arduino/testing/ticktest/: ticktest.ino
auto/: .autotools  .cproject  README  configure.ac  configure.scan
auto/src/: main.cpp
bash/: absolute-path.sh  current-script-location.sh  result-code.sh  silent-push-pop.sh
bat/: absolute-path.bat  error-level.bat
c/: CMakeLists.txt  Makefile
c/auto/: .project  AUTHORS
c/forgo/: CMakeLists.txt  Makefile  forgo.c
c/goodmain/: CMakeLists.txt  goodmain.c
c/qt/: .gitignore
c/serial/win/: CMakeLists.txt  example.c  jrk.c  jrk.h  serial.c  serial.h
c/web/wasmc/: CMakeLists.txt
c/web/wasmc/emscripten/fileex/: .gitignore  fileex.c
c/web/wasmc/emscripten/gl/: gl.cpp
c/web/wasmc/emscripten/hello-three/: hello-three.c
c/web/wasmc/emscripten/sdl/: hello_world_sdl.c
camel/camel-blueprint-project/: pom.xml
camel/camel-java-soap/: pom.xml
cpp/opencvex/: CMakeLists.txt  README.md
cpp/opencvex/src/display/: CMakeLists.txt  display.cpp
cpp/opencvex/src/face/: CMakeLists.txt  face.cpp
cpp/opencvex/src/video/: CMakeLists.txt  video.cpp
docker/microservices/: docker-compose.dev.yml
dotnet/: .gitignore
go/: Makefile  time-example.go
go/configuration/: configuration.go  configuration.yaml
go/containerizing/: README.md
go/modules/: entry.go
go/opcua/: README.md
go/regex/: regex.go
go/using-go-for-c/: forgo.yaml
go/websocket/: websocket.go
go/withc/: Makefile  withc.go
hyperjaxb3/documents/: FromXMLtoDatabaseAndBack.ppt
include/gos/: forgo.h
java/baeldung/: README.md  pom.xml
java/mongodb/: README.md  pom.xml
java/mqtt/: pom.xml
java/opcua/: README.md  pom.xml
java/pi4j/: pom.xml
java/remote/: pom.xml
java/spring/: README.md
java/web/: pom.xml
lib/: .gitignore
net/: examples.sln
python/: .gitignore  factorial.py
python/cert/: .gitignore  cert01.py
python/data/: data.json  jsonread01.py  jsonread02.py
python/draw/: svg1.py
python/graph/: README.md  animation1.py  eq1.py  eq3.py  graph1.py  graph2.py  graph3.py  graph4.py  graph6.py  graph7.py  p3d-curve.py  p3d1.py  p3d2.py  p3d3.py  turtle1.py  vectorfield1.py  vectorfield2.py  vectorfield3.py
python/grpc/: helloworld_pb2.py
python/http/: rest-requests.py  websocket-experiment.py  websocket-greeting-a.py  websocket-greeting-b.py  websocket-greeting-c.py
python/os/: mypath.py
python/raspberrypi/: README.md  example1.py  example2.py
python/sci/: .gitignore  imgproc01.py  imgproc02.py  mast01.py  mast02.py  mast03.py  mast04.py  mast05.py  mast06.py
python/sound/: README.md  listdevices.py  recordplay1.py  requirements.txt  text2speech1.py  util.py
python/testing/: mycalculations.py  test_sample1.py  test_str.py  tests.py
python/visit/: README.md  example1.py
r/: .gitignore
r/calculus/: complex-1.R  differentiation-1.R  integration-1.R
r/functional/: anonymous.R  closures.R  lists.R  motivation.R
r/plotting/: animated-1.R
r/reporting/: other.Rmd
r/resampling/: aggregate-1.R  aggregate-2.R  mean-every-n-rows-1.R  resample-time-series-1.R
r/signals/: fft.R  gsignalexa.R
r/statistics/: rmse-1.R
r/tmp/: .gitignore
r/wrangling/: combinetables.R  filter.R  lag.R  reshape.R
raspberrypi/audio/: .gitignore  aslibex.c
raspberrypi/pigpio/: blinkled.c
ruby/: regex.rb  sandbox.rb
scripts/: .gitignore  build-apache-maven-example.bat  build.cmd  clean-apache-maven-example.bat  deploy-apache-maven-boot-example.bat  env.bat.examples  mcp3208.sh  redeploy-apache-maven-boot-example.bat  run-apache-maven-boot-example.bat  run-apache-maven-boot-web-example.bat  run-apache-maven-example.bat  run-apache-maven-web-jetty-example.bat  undeploy-apache-maven-boot-example.bat
tests/c/forgo/: CMakeLists.txt  forgo.cpp
tutorials/emscripten/sdl2/snake/: .exrc  CMakeLists.txt  Makefile  engine.c  engine.h  main.c
tutorials/emscripten/sdl2/snake/snake_assets/: emscripten_tutorial.xcf
web/angular-concepts/: angular.json  package-lock.json  package.json  tsconfig.json
web/angular-config/: README.md  package-lock.json  package.json
web/angular-tour-of-heroes/: angular.json  package-lock.json
web/angularapp/: angular.json
web/d3hm/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
web/lcjs-charting/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
web/scichart/: .gitignore  package.json
web/ts/: .gitignore  README.md  index.ts  package-lock.json  package.json  tsconfig.json
xml/schema/: example.xsd
(+1512 files in other folders)
